--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.env
+node_modules/
+client/dist/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
