--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,28 +1,23 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Environment variables
 .env
+
+# Node dependencies
 node_modules/
+
+# Build outputs
 client/dist/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Logs
+logs/
+*.log
 
-# Editor directories and files
+# Editor and IDE files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.swp
