--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,26 +1,23 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Environment variables
 .env
-node_modules/
-client/dist/
-node_modules
-dist
-dist-ssr
-*.local
 
-# Editor directories and files
+# Node dependencies
+node_modules/
+
+# Build outputs
+client/dist/
+
+# Logs
+logs/
+*.log
+
+# Editor and IDE files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.swp
