--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^4.0.0",
     "@stripe/stripe-js": "^7.9.0",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
