FEATURE: cloudinary, and multer for product image upload and storage

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,7 @@ STRIPE_SECRET_KEY=sk_test_51NXkUTBLK6BdgA0W08xLdYsyhir0gB3HKMVbrYyf9YR8iB3RGMauI
 EMAIL_SERVICE=smtp.gmail.com
 EMAIL_USER=fracnfern@gmail.com
 EMAIL_PASS=oaft crrt crmn plvp
+
+CLOUDINARY_CLOUD_NAME=diahhtvuz
+CLOUDINARY_API_KEY=247253179235564
+CLOUDINARY_API_SECRET=1xrwuyVKyVvsafjZa66bCOCadXI
